# dzxcz

./: .gitattributes  .gitignore  Makefile  README.md  activities.csv  config.yaml  main.go  ruleset.yaml
.github/: dependabot.yml
archetypes/: posts.md
assets/css/: main.scss  photos.scss  syntax.css
cli/: Cargo.toml  README.md
cli/src/: books.rs  main.rs  photos.rs
content/: _index.md  all.md  before_i_die.md  etc.md  stats.md
content/about/: index.md
content/activities/: 2086396414.md  3042278699.md  3045709780.md  3082640972.md  3142195386.md  3153866239.md  3156605422.md  3167661527.md  3170382394.md  3177405175.md  3179799420.md  3182870501.md  3186195922.md  3190302174.md  3194572399.md  3205783960.md  3213483160.md  3223759154.md  3227724918.md  3231813823.md  3242361240.md  3246443692.md  3254028768.md  3259277759.md  3266838125.md  3275510707.md  3289509899.md  3298116341.md  3302766072.md  3311314557.md  3317109187.md  3321772141.md  3332087225.md  3337405003.md  3341703094.md  3345873861.md  3351465695.md  3355173581.md  3361337950.md  3361851576.md  (+794 more)
content/atoms/: azerothcore.md  crdts_and_text_editing.md  from_logs_to_trace.md  golang_sdk_generator.md  gopls_mcp.md  inception.md  keeping_packages_up_to_date.md  new_zealand_photos.md  (+8 more)
data/: athlete.json  stats.json  zones.json
layouts/: 404.html  about.html  all.html  baseof.html  etc.html  home.html  index.html  list.html  list.rss.xml  rss.xml  single.html  taxonomy.html  term.html
scripts/: ib.py
static/: init.vim  istria_100_2023.avif
stats/: README.md  go.mod  go.sum  main.go
(+1466 files in other folders)
