[package]
name = "cli"
version = "0.1.0"
edition = "2021"
default-run = "dzx"

[[bin]]
name = "dzx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.26", features = [
  "derive",
  "string",
  "env",
  "wrap_help",
] }
kamadak-exif = "0.5.5"
reqwest = {version = "0.12.12", features = ["blocking", "json"]}
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.139"
serde_yml = "0.0.12"
tempfile = "3.15.0"

[profile.release]
lto = "thin"

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
opt-level = 3
